--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   },
   "dependencies": {
     "@middy/core": "^3.4.0",
-    "@middy/http-json-body-parser": "^3.4.0"
+    "@middy/http-json-body-parser": "^3.4.0",
+    "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1412.0",
+    "axios": "^1.4.0",
+    "jsonwebtoken": "^9.0.1"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
-    "@types/aws-lambda": "^8.10.71",
-    "@types/node": "^14.14.25",
+    "@types/aws-lambda": "^8.10.119",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^14.18.53",
     "esbuild": "^0.14.11",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
+    "serverless-aws-documentation": "^1.1.0",
     "serverless-esbuild": "^1.23.3",
     "serverless-offline": "^12.0.4",
     "ts-node": "^10.4.0",
