--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,7 +3,9 @@
     "baseUrl": ".",
     "paths": {
       "@functions/*": ["src/functions/*"],
-      "@libs/*": ["src/libs/*"]
+      "@libs/*": ["src/libs/*"],
+      "@business/*": ["src/02BusinessLogic/v0/*"],
+      "@interfaces/*": ["src/interfaces/*"]
     }
   }
 }
