--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1412.0",
     "axios": "^1.4.0",
-    "jsonwebtoken": "^9.0.1"
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.2"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
