--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@middy/core": "^3.4.0",
+    "@middy/http-cors": "^4.5.5",
     "@middy/http-json-body-parser": "^3.4.0",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1412.0",
